@@ -19,6 +19,8 @@ changes relative to sbcl-1.4.3:
     per operation (lp#1587983)
   * bug fix: big-endian MIPS systems now (mostly) work again (broken since
     1.3.14.x).
+  * enhancement: warnings and errors referring to bindings established by LET,
+    LET*, FLET and LABELS point to the offending form more accurately.
 
 changes in sbcl-1.4.3 relative to sbcl-1.4.2:
   * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
